--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" />  Can be deleted --> 
+    <link rel="icon" type="image/svg+xml" href="/LogoExcelWindowSmall.png" />  Can be deleted
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excel SolutionsV Blog</title>
   </head>
