--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/LogoExcelWindowSmall.png" /> <!--  Can be deleted -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excel SolutionsV Blog</title>
+    <!-- AdSense Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909802717375323"
+    crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
